compiler/tests/compiler/must_fail/t_01.rs.exp.err
tests/compiler/must_fail/t_01.rs:1:16: 1:19 error: foreign function cannot have extern modifier
decl! { pub fn test(); }
               ^^^^
